refactored code through usign a head

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"initializer_list": "cpp",
 		"type_traits": "cpp",
 		"xstring": "cpp",
-		"xutility": "cpp"
+		"xutility": "cpp",
+		"cstring": "c"
 	}
 }
